--- a/misc/templates/CMakeLists.txt.j2
+++ b/misc/templates/CMakeLists.txt.j2
@@ -3,20 +3,20 @@
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 #
-
-{%- if srcs %}
-
+{% if impl or impls %}
 #################### build ####################
 
 target_sources(hbrs_mpl PRIVATE
-{%- for src in srcs %}
-    {{ src.name }}
+{%- if impl %}
+    {{ impl.name }}
+{%- endif -%}
+{%- for impl in impls %}
+    {{ impl.name }}
 {%- endfor -%}
 )
 {% endif -%}
 
-{%- if benchmarks %}
-
+{% if benchmarks %}
 #################### benchmarks ####################
 
 foreach(name
@@ -29,8 +29,7 @@ endforeach()
 
 {% endif -%}
 
-{%- if tests or test %}
-
+{% if tests or test %}
 #################### tests ####################
 
 {% if test -%}
@@ -50,8 +49,7 @@ endforeach()
 
 {% endif -%}
 
-{%- if sub_dirs %}
-
+{% if sub_dirs %}
 #################### list the subdirectories ####################
 
 {% for sub_dir in sub_dirs -%}
@@ -59,7 +57,6 @@ add_subdirectory({{ sub_dir.name }})
 {% endfor %}
 {%- endif %}
 
-{%- if not (srcs or sub_dirs or benchmarks or test or tests) %}
-
+{%- if not (impl or impls or sub_dirs or benchmarks or test or tests) %}
 # BLANK
 {% endif %}
